# Flask_Projects

./: README.md  pyproject.toml
project_01/: README.md  pyproject.toml  requirement.txt
project_01/src/project_01/: app.py
project_01/src/project_01/templates/: welcome.html
project_02/src/project_02/: app.py
project_02/src/project_02/templates/: home.html  login.html  logout.html  welcome.html
project_03/: README.md
project_03/src/project_03/: app.py
project_03/src/project_03/templates/: base.html  feedback.html  thankyou.html
src/project_01/: app.py
src/project_01/templates/: home.html  login.html  logout.html  welcome.html
