[tool.poetry]
name = "flask-workspace"
version = "0.1.0"
description = ""
authors = ["human02 <42168454+human02@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"