[tool.poetry]
name = "flask-workspace"
version = "0.1.0"
description = ""
authors = ["human02 <42168454+human02@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"
requests = "^2.32.5"
flask-wtf = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-mock = "^3.15.1"
pytest-flask = "^1.3.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"